Switch to chicken recipe

--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
 
         let {div} = H;
 
-        let recipe = [
+        /*let recipe = [
             {name: "Ground Beef", amount: 263},
             {name: "Rice", amount: 139},
             {name: "Canola Oil", amount: 33},
             {name: "Corn", amount: 19},
             {name: "Applesauce", amount: 41},
             {name: "BalanceIt", amount: 9.7}
-        ];
+        ];*/
+        let recipe = [
+            {name: "Chicken", amount: 121},
+            {name: "Rice", amount: 158},
+            {name: "Canola Oil", amount: 24},
+            {name: "Corn", amount: 19},
+            {name: "Applesauce", amount: 61},
+            {name: "BalanceIt", amount: 5.6}
+        ]
 
         async function demoRamp(from, to, ticks, setWeight) {
             for (let i = 0; i < ticks; i++) {
