--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             {name: "Applesauce", amount: 41},
             {name: "BalanceIt", amount: 9.7}
         ];*/
+        /*
         let recipe = [
             {name: "Chicken", amount: 121},
             {name: "Rice", amount: 158},
@@ -48,6 +49,17 @@
             {name: "Applesauce", amount: 61},
             {name: "BalanceIt", amount: 5.6}
         ]
+        */
+
+        let recipe = [
+            {name: "Chicken", amount: 82},
+            {name: "Rice", amount: 99},
+            {name: "Canola Oil", amount: 16},
+            {name: "Corn", amount: 19},
+            {name: "Green Beans", amount: 34},
+            {name: "Banana", amount: 19},
+            {name: "BalanceIt", amount: 3.75}
+        ];
 
         async function demoRamp(from, to, ticks, setWeight) {
             for (let i = 0; i < ticks; i++) {
