--- a/index.html
+++ b/index.html
@@ -51,13 +51,22 @@
         ]
         */
 
-        let recipe = [
+        /*let recipe = [
             {name: "Chicken", amount: 82},
             {name: "Rice", amount: 99},
             {name: "Canola Oil", amount: 16},
             {name: "Corn", amount: 19},
             {name: "Green Beans", amount: 34},
             {name: "Banana", amount: 19},
+            {name: "BalanceIt", amount: 3.75}
+        ];*/
+
+        let recipe = [
+            {name: "Beef", amount: 100},
+            {name: "Rice", amount: 60},
+            {name: "Canola Oil", amount: 12},
+            {name: "Corn", amount: 19},
+            {name: "Green Beans", amount: 17},
             {name: "BalanceIt", amount: 3.75}
         ];
 
