--- a/index.html
+++ b/index.html
@@ -61,14 +61,24 @@
             {name: "BalanceIt", amount: 3.75}
         ];*/
 
-        let recipe = [
+        /*let recipe = [
             {name: "Beef", amount: 100},
             {name: "Rice", amount: 60},
             {name: "Canola Oil", amount: 12},
             {name: "Corn", amount: 19},
             {name: "Green Beans", amount: 17},
             {name: "BalanceIt", amount: 3.75}
-        ];
+        ];*/
+
+        let recipe = [
+            {name: "Chicken", amount: 82},
+            {name: "Rice", amount: 99},
+            {name: "Canola Oil", amount: 16},
+            {name: "Corn", amount: 19},
+            {name: "Green Beans", amount: 34},
+            {name: "Applesauce", amount: 31},
+            {name: "BalanceIt", amount: 3.75}
+        ]
 
         async function demoRamp(from, to, ticks, setWeight) {
             for (let i = 0; i < ticks; i++) {
