--- a/index.html
+++ b/index.html
@@ -70,12 +70,22 @@
             {name: "BalanceIt", amount: 3.75}
         ];*/
 
-        let recipe = [
+        /*let recipe = [
             {name: "Chicken", amount: 82},
             {name: "Rice", amount: 99},
             {name: "Canola Oil", amount: 16},
             {name: "Corn", amount: 19},
             {name: "Green Beans", amount: 34},
+            {name: "Applesauce", amount: 31},
+            {name: "BalanceIt", amount: 3.75}
+        ]*/
+
+        let recipe = [
+            {name: "Chicken", amount: 82},
+            {name: "Rice", amount: 99},
+            {name: "Canola Oil", amount: 16},
+            {name: "Corn", amount: 19},
+            {name: "Broccoli", amount: 20},
             {name: "Applesauce", amount: 31},
             {name: "BalanceIt", amount: 3.75}
         ]
