Add some recipes

--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
                 {name: "Broccoli", amount: 39},
                 {name: "Applesauce", amount: 31},
                 {name: "BalanceIt", amount: 3.75}
+            ],
+            "Chicken and rice": [
+                {name: "Chicken", amount: 82},
+                {name: "Rice", amount: 119},
+                {name: "Canola Oil", amount: 16},
+                {name: "BalanceIt", amount: 3.75}
+            ],
+            "Chicken and rice with applesauce": [
+                {name: "Chicken", amount: 82},
+                {name: "Rice", amount: 119},
+                {name: "Canola Oil", amount: 16},
+                {name: "Applesauce", amount: 31},
+                {name: "BalanceIt", amount: 3.75}
             ]
         };
 
